--- a/SPMG - base/estilo/login.css
+++ b/SPMG - base/estilo/login.css
@@ -27,9 +27,7 @@ align-items: center;
     align-items: center;
     display: flex;
     background-color: #0082F0;
-    border-top: 3px solid rgba(0, 0, 0, 0.43);
-    border-left: 3px solid rgba(0, 0, 0, 0.43);
-    border-bottom: 3px solid rgba(0, 0, 0, 0.43);
+    box-shadow: 0px 0px 10px;
 }
 
 .retangulo2 img {
@@ -43,9 +41,7 @@ align-items: center;
     flex-direction: column;
     width: 342px;
     height: 461px;
-    border-top: 3px solid rgba(0, 0, 0, 0.43);
-    border-right: 3px solid rgba(0, 0, 0, 0.43);
-    border-bottom: 3px solid rgba(0, 0, 0, 0.43);
+    box-shadow: 0px 0px 10px;
     background: rgb(255, 255, 255);
 }
 
@@ -74,12 +70,15 @@ align-items: center;
     background: #0082F0;
     border-width: 1px;
     border-style: solid;
-    border-color: rgb(77, 77, 77);
+    border-color: rgb(0, 0, 0);
     border-image: initial;
-    border-radius: 2px;
+    box-shadow: 0px 0px 5px;
 }
 
 .form_login button {
+    
+    border-width: 1px;
+    border-style: solid;
     width: 100px;
     height: 30px;
     color: white;
@@ -88,6 +87,10 @@ align-items: center;
     top: 5px;
     left: 83px;
     background: #0082F0;
+    box-shadow: 0px 0px 5px;
+    border-color: rgb(0, 0, 0);
+    
+    
 }
 
 
