--- a/SPMG/src/Adm.css
+++ b/SPMG/src/Adm.css
@@ -2,17 +2,19 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-}
-body{
-    width:100%;
-    height:2077px;
-    position:absolute;
-    background-color:#55A2E3;
+  
+} 
+ tbody{
+    
+   
+    background-image: url('./images/030.png');
+background-repeat: no-repeat;
+background-size:cover;
+background-position:center ;
     display:flex;
     justify-content:center;
     align-items:center;
-    top:0;
-    left:0;
+    
 }
 
 
@@ -20,9 +22,14 @@ body{
 .containerprincipal{
     width:1200px;
     height:1200px;
-    background-color: #0082F0;
+    background-image: url('./images/030.png');
+background-repeat: no-repeat;
+background-size:cover;
+background-position:center ;
     box-shadow: 0px 0px 10px;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .container1{
@@ -50,7 +57,7 @@ body{
     left: 826px;
     top: 344px;
     margin-bottom: 20px; 
-    background-color:#55A2E3;
+    background-color:#000000;
   
     
 }
@@ -70,7 +77,7 @@ body{
 .form_cadastro1 textarea{
     width: 800px;
     height: 40px;
-    background-color:#55A2E3;
+    background-color:#000000;
     color: #fff;
     
     
@@ -84,7 +91,7 @@ body{
     cursor: pointer;
     position: relative;
     text-align: center;
-    background-color:#55A2E3;
+    background-color:#000000;
     
     
     
