Cadastro, Listagem e Login de consultas terminado

--- a/SPMG/src/Adm.css
+++ b/SPMG/src/Adm.css
@@ -114,7 +114,8 @@ textarea::placeholder {
  
   }
 
-  .table {
+  .tbody table {
       align-items: center;
       justify-content: center;
+      
   }
